# feeluown-download

./: README.md  pyproject.toml  setup.py
fuo_dl/: __init__.py  base_downloader.py  cli.py  downloader.py  helpers.py  manager.py  progress.py  py_downloader.py  statusline.py  tag_helpers.py  tag_manager.py  tagger.py  tagger_helpers.py  tagger_manager.py  task.py  ui.py
fuo_dl/v2/: manager.py  ui.py
research/: read_vs_rawread.py
test/: test_tag_helpers.py  test_tagger.py
